# medical-image-segmentation

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: architecture.md  benchmarks.md  index.md  usage.md
notebooks/: README.md
scripts/: example_config.yaml  generate_overlay_example.py
src/: evaluate.py  inference.py  predict.py  train.py
src/medical_image_segmentation/: __init__.py  cli.py  training.py
src/medical_image_segmentation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/medical_image_segmentation/config/: __init__.py  schema.py
src/medical_image_segmentation/datasets/: __init__.py  dataloader.py  dataset.py  samplers.py  transforms.py
src/medical_image_segmentation/explainability/: __init__.py  attention.py  feature_maps.py  gradcam.py
src/medical_image_segmentation/export/: __init__.py  dicom.py  nifti.py  png.py  stl.py
src/medical_image_segmentation/inference/: __init__.py  classical.py  engine.py
src/medical_image_segmentation/losses/: __init__.py  boundary.py  combined.py  dice.py  focal.py  tversky.py
src/medical_image_segmentation/metrics/: __init__.py  functional.py
src/medical_image_segmentation/models/: __init__.py  model_factory.py
src/medical_image_segmentation/preprocessing/: __init__.py  normalization.py  patching.py
src/medical_image_segmentation/visualization/: __init__.py  contours.py  metrics.py  overlays.py  plots.py  volume.py
tests/: test_classical_inference.py  test_metrics.py  test_normalization.py  test_patching.py
