[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-image-segmentation"
version = "0.1.0"
description = "Model-agnostic medical image segmentation framework."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Medical Image Segmentation Contributors"}]
dependencies = [
  "torch>=2.3", "torchvision>=0.18", "monai>=1.3", "lightning>=2.3",
  "SimpleITK>=2.3", "nibabel>=5.2", "numpy>=1.26", "scipy>=1.12",
  "pandas>=2.2", "scikit-image>=0.23", "opencv-python-headless>=4.10",
  "albumentations>=1.4", "matplotlib>=3.9", "plotly>=5.22",
  "pydicom>=3.0", "PyYAML>=6.0", "pydantic>=2.7", "tensorboard>=2.17"
]

[project.optional-dependencies]
tracking = ["mlflow>=2.14", "wandb>=0.17"]
sam = ["segment-anything>=1.0"]
mesh = ["trimesh>=4.4"]
dev = ["pytest>=8.2", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
mis-train = "medical_image_segmentation.cli:train_main"
mis-predict = "medical_image_segmentation.cli:predict_main"
mis-evaluate = "medical_image_segmentation.cli:evaluate_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=medical_image_segmentation --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "UP", "B", "SIM"]
ignore = ["D203", "D213", "D413", "N812", "N813"]

